--- a/.github/android.yml
+++ b/.github/android.yml
@@ -4,11 +4,21 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: ['main']
-  pull_request:
-    branches: ['main']
+  on:
+  workflow_dispatch: # This allows manual triggering
+    inputs:
+      version_number:
+        description: "Version number"
+        required: false
+      environment:
+        type: choice
+        description: "Environment (dev/sandbox/prod)"
+        required: true
+        default: "dev"
+        options:
+          - dev
+          - sandbox
+          - prod
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,3 +44,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      # Run Fastlane using the generated JSON key file
+      - name: Build and deploy Android app using Fastlane
+        run: bundle exec fastlane release_to_play_store
+        env:
+          GOOGLE_PLAY_API_KEY: /tmp/google-play-api-key.json
+          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
