--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,20 +7,17 @@ on:
   workflow_dispatch: # This allows manual triggering
     inputs:
       version_number:
-        description: "Version number"
+        description: 'Version number'
         required: false
       environment:
         type: choice
-        description: "Environment (dev/sandbox/prod)"
+        description: 'Environment (dev/sandbox/prod)'
         required: true
-        default: "dev"
+        default: 'dev'
         options:
           - dev
           - sandbox
           - prod
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
