--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,29 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+
+      # Print current working directory
+      - name: Print working directory (pwd)
+        run: pwd
+
+      # Set up Ruby and Bundler automatically
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3.5
+          bundler-cache: false
+
+      - name: Setup fastlane
+        id: set_up_fastlane
+        run: |
+          gem install bundler -v 2.4.22
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
