--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: Build and Deploy Android
 
-name: CI
-
-# Controls when the workflow will run
 on:
   workflow_dispatch: # This allows manual triggering
     inputs:
@@ -19,17 +16,15 @@ on:
           - sandbox
           - prod
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Fetch the full history so nothing is missing
 
       - name: Set up JDK 17
         uses: actions/setup-java@v1
@@ -54,18 +49,32 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Determine Version Number
+        id: get_version
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          # Get current date in the format YYYY.MM.DD
+          date=$(date +'%Y.%m.%d')
+
+          # Calculate the next tag number
+          previous_tag=$(git tag --list "$date.*" | sort -r | head -n 1)
+          echo $previous_tag
+          if [ -n "$previous_tag" ]; then
+            last_three_digits=$(echo "$previous_tag" | awk -F '.' '{print $NF}')
+            echo $last_three_digits
+            incremented_number=$((10#$last_three_digits + 1))
+            echo $incremented_number
+          else
+            incremented_number=1
+          fi
+
+          RELEASE_NUMBER="$date.$(printf "%03d" $incremented_number)"
+          echo "RELEASE_NUMBER=$RELEASE_NUMBER" >> $GITHUB_ENV
+          echo "RELEASE_NUMBER: $RELEASE_NUMBER"
+        shell: bash
 
       # Run Fastlane using the generated JSON key file
       - name: Build and deploy Android app using Fastlane
         run: bundle exec fastlane release_to_play_store
         env:
+          GOOGLE_PLAY_API_KEY: /tmp/google-play-api-key.json
           GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
