--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Fetch the full history so nothing is missing
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v1
@@ -77,3 +78,4 @@ jobs:
         run: bundle exec fastlane release_to_play_store
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
