--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -75,6 +75,6 @@ jobs:
 
       # Run Fastlane using the generated JSON key file
       - name: Build and deploy Android app using Fastlane
-        run: bundle exec fastlane release_to_play_store
+        run: bundle exec fastlane release_to_play_store --verbose
         env:
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
