--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,11 +50,6 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      - name: Configure Git user
-        run: |
-          git config user.name "shriyashfinov8"
-          git config user.email "shriyash@finov8.io"
-
       - name: Determine Version Number
         id: get_version
         run: |
@@ -83,3 +78,5 @@ jobs:
         run: bundle exec fastlane release_to_play_store --verbose
         env:
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          VERSION_NUMBER: ${{ github.event.inputs.version_number || '1.0.0' }}
+          ENVIRONMENT: ${{ github.event.inputs.environment }}
