--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup fastlane
         id: set_up_fastlane
         run: |
-          gem install bundler -v 2.4.22
+          gem install bundler
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
