--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -76,8 +76,22 @@ jobs:
       - name: Set up environment variables
         id: setup_env
         run: |
-          ENV="${{ secrets.ENV_ }}$(echo "${{ github.event.inputs.environment }}" | tr '[:lower:]' '[:upper:]')"
-          echo "ENV=$ENV" >> .env
+          # Convert the input environment to uppercase
+          ENV_NAME=$(echo "${{ github.event.inputs.environment }}" | tr '[:lower:]' '[:upper:]')
+
+          ENV=${{secrets['ENV_' + ENV_NAME]}}
+          API_BASE_URL=${{secrets['API_BASE_URL_' + ENV_NAME]}}
+          GOOGLE_OAUTH_CLIENT_ID_WEB = ${{secrets['GOOGLE_OAUTH_CLIENT_ID_WEB_' + ENV_NAME]}}
+          GOOGLE_OAUTH_CLIENT_ID_IOS = ${{secrets['GOOGLE_OAUTH_CLIENT_ID_IOS_' + ENV_NAME]}}
+          STRIPE_PUBLISHABLE_KEY = ${{secrets['STRIPE_PUBLISHABLE_KEY_' + ENV_NAME]}}
+
+          # Append the environment variables to the .env file
+          echo "ENV=$ENV_SECRET" >> .env
+          echo "API_BASE_URL=$API_BASE_URL_SECRET" >> .env
+          echo "GOOGLE_OAUTH_CLIENT_ID_WEB=$GOOGLE_OAUTH_CLIENT_ID_WEB_SECRET" >> .env
+          echo "GOOGLE_OAUTH_CLIENT_ID_IOS=$GOOGLE_OAUTH_CLIENT_ID_IOS_SECRET" >> .env
+          echo "STRIPE_PUBLISHABLE_KEY=$STRIPE_PUBLISHABLE_KEY_SECRET" >> .env
+
           echo "Printing current working directory"
           pwd
           echo "Printing the .env file"
