--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,9 +12,9 @@ on:
         required: true
         default: 'dev'
         options:
-          - dev
-          - sandbox
-          - prod
+          - DEV
+          - SANDBOX
+          - PROD
 
 jobs:
   build:
@@ -95,9 +95,9 @@ jobs:
           cat .env
 
       # Run Fastlane using the generated JSON key file
-      - name: Build and deploy Android app using Fastlane
-        run: bundle exec fastlane release_to_play_store --verbose
-        env:
-          GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-          VERSION_NUMBER: ${{ github.event.inputs.version_number || '1.0.0' }}
-          ENVIRONMENT: ${{ github.event.inputs.environment }}
+      # - name: Build and deploy Android app using Fastlane
+      #   run: bundle exec fastlane release_to_play_store --verbose
+      #   env:
+      #     GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+      #     VERSION_NUMBER: ${{ github.event.inputs.version_number || '1.0.0' }}
+      #     ENVIRONMENT: ${{ github.event.inputs.environment }}
