--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: ${{ github.inputs.environment }}
 
     steps:
       - name: Checkout code
@@ -76,13 +77,11 @@ jobs:
       - name: Set up environment variables
         id: setup_env
         run: |
-          ENV_NAME=${{ github.event.inputs.environment }}  
 
-          # Dynamically construct variable names and fetch values
-          API_BASE_URL=$(eval echo "\${{ vars.API_BASE_URL_${ENV_NAME} }}")
-          GOOGLE_OAUTH_CLIENT_ID_WEB=$(eval echo "\${{ vars.GOOGLE_OAUTH_CLIENT_ID_WEB_${ENV_NAME} }}")
-          GOOGLE_OAUTH_CLIENT_ID_IOS=$(eval echo "\${{ vars.GOOGLE_OAUTH_CLIENT_ID_IOS_${ENV_NAME} }}")
-          STRIPE_PUBLISHABLE_KEY=$(eval echo "\${{ vars.STRIPE_PUBLISHABLE_KEY_${ENV_NAME} }}")
+          API_BASE_URL=${{vars.API_BASE_URL}}
+          GOOGLE_OAUTH_CLIENT_ID_WEB=${{vars.GOOGLE_OAUTH_CLIENT_ID_WEB}}
+          GOOGLE_OAUTH_CLIENT_ID_IOS=${{vars.GOOGLE_OAUTH_CLIENT_ID_IOS}}
+          STRIPE_PUBLISHABLE_KEY=${{vars.STRIPE_PUBLISHABLE_KEY}}
 
           # Append the environment variables to the .env file
           echo "API_BASE_URL=$API_BASE_URL" >> .env
